# Proyecto-1-Datos-2

./: README.md
Documentación IDE/: _cliente_8h_source.html  annotated.html  class_cliente-members.html  class_cliente.html  class_main_window-members.html  class_main_window.html  class_string_parse-members.html  class_string_parse.html  classes.html  classlogger-members.html  classlogger.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1byte__container__with__subtype-members.html  classnlohmann_1_1byte__container__with__subtype.html  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1exception.html  classnlohmann_1_1detail_1_1file__input__adapter-members.html  classnlohmann_1_1detail_1_1file__input__adapter.html  classnlohmann_1_1detail_1_1input__stream__adapter-members.html  classnlohmann_1_1detail_1_1input__stream__adapter.html  classnlohmann_1_1detail_1_1invalid__iterator-members.html  classnlohmann_1_1detail_1_1invalid__iterator.html  classnlohmann_1_1detail_1_1iter__impl-members.html  classnlohmann_1_1detail_1_1iter__impl.html  classnlohmann_1_1detail_1_1iteration__proxy-members.html  classnlohmann_1_1detail_1_1iteration__proxy.html  classnlohmann_1_1detail_1_1iteration__proxy__value-members.html  classnlohmann_1_1detail_1_1iteration__proxy__value.html  classnlohmann_1_1detail_1_1iterator__input__adapter-members.html  classnlohmann_1_1detail_1_1iterator__input__adapter.html  classnlohmann_1_1detail_1_1json__ref-members.html  classnlohmann_1_1detail_1_1json__ref.html  classnlohmann_1_1detail_1_1json__reverse__iterator-members.html  classnlohmann_1_1detail_1_1json__reverse__iterator.html  (+255 more)
Pro-Pruebas/C_IDE/: CMakeLists.txt  Cliente.cpp  client.cpp  client.h  logger.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stringparse.cpp  stringparse.h
Pro-Pruebas/Mserver/: CMakeLists.txt  FacadeMemory.cpp  FacadeMemory.h  logger.cpp  logger.h  main.cpp  malloc.h  memory.cpp  memory.h  memoryblock.cpp  memoryblock.h  mserver.cpp  mserver.h  mserver.ui  node.h  variables.cpp  variables.h
(+580 files in other folders)
